<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFinder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_bssid">BSSID: </string>
    <string name="lbl_ssid">SSID: </string>
    <string name="lbl_capabilities">Capabilities: </string>
    <string name="lbl_frequency">Freq: </string>
    <string name="lbl_level">Lvl: </string>
    <string name="lbl_timestamp">Time: </string>
    
</resources>