<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2" 
    android:rowCount="6">

    <TextView
        android:id="@+id/lblBssid"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="0"
        android:text="@string/lbl_bssid" />
    <TextView
        android:id="@+id/dataBssid"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="0"
        android:text="dataBssid" />

    <TextView
        android:id="@+id/lblSsid"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="1"
        android:text="@string/lbl_ssid" />
    <TextView
        android:id="@+id/dataSsid"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="1"
        android:text="dataSsid" />

    <TextView
        android:id="@+id/lblCapabilities"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="2"
        android:text="@string/lbl_capabilities" />
    <TextView
        android:id="@+id/dataCapabilities"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="2"
        android:text="dataCapabilities" />

    <TextView
        android:id="@+id/lblFrequency"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="3"
        android:text="@string/lbl_frequency" />
    <TextView
        android:id="@+id/dataFrequency"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="dataFrequency" />

    <TextView
        android:id="@+id/lblLevel"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4"
        android:text="@string/lbl_level" />
    <TextView
        android:id="@+id/dataLevel"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="4"
        android:text="dataLevel" />

    <TextView
        android:id="@+id/lblTimestamp"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="5"
        android:text="@string/lbl_timestamp" />
    <TextView
        android:id="@+id/dataTimestamp"
        android:layout_column="1"
        android:layout_gravity="right|center_vertical"
        android:layout_row="5"
        android:text="dataTimestamp" />

</GridLayout>